--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ fastprogress==1.0.3
 filelock==3.12.0
 Flask==2.3.1
 fonttools==4.39.3
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
